# rpi-crosstools

glibc-2.14.1/etc/: ld.so.cache
glibc-2.14.1/libexec/: pt_chown
glibc-2.14.1/libexec/getconf/: POSIX_V6_LP64_OFF64
glibc-2.14.1/sbin/: iconvconfig  ldconfig  nscd  sln  zdump  zic
qemu-2.1.2/libexec/: qemu-bridge-helper
qemu-2.1.2/share/man/man1/: qemu-img.1  qemu.1
qemu-2.1.2/share/man/man8/: qemu-nbd.8
rootfs/etc/: hostname  ld.so.cache  resolv.conf  shadow  shadow-
rootfs/etc/apt/: sources.list  trustdb.gpg
rootfs/etc/init.d/: .depend.boot  .depend.start  .depend.stop
rootfs/lib/arm-linux-gnueabihf/: libdbus-1.so.3.7.2
rootfs/opt/kioskd/lib/: libSDL2-2.0.so.0.2.1  libSDL2_image-2.0.so.0.0.0  libev.la  libpng16.so.16.13.0  libz.so.1.2.8
rootfs/root/: .bash_history  .bashrc  .nano_history
rootfs/root/kioskd-build/: CMakeLists.txt  README.md  test.pl  testpi.pl
rootfs/root/kioskd-build/include/: graphics.h  kioskd.h  prop.h  prop_interface.h  propmanager.h
rootfs/root/kioskd-build/props/: generic.c  image.c  linegraph.c  text.c  video.c  video_bcm_omx.c  video_ffmpeg.c  video_gst.c  video_gst_pipeline.c  video_gst_pipeline.h
rootfs/root/kioskd-build/src/: cJSON.c  graphics.c  jsonrpc-c.c  kioskd.c  main.c  propmanager.c
rootfs/run/: motd.dynamic
rootfs/usr/lib/: libxmlrpc.so.3.16  libxmlrpc_abyss.so.3.16  libxmlrpc_client.so.3.16  libxmlrpc_server.so.3.16  libxmlrpc_server_abyss.so.3.16  libxmlrpc_server_cgi.so.3.16  libxmlrpc_util.so.3.16  libxmlrpc_xmlparse.so.3.16  libxmlrpc_xmltok.so.3.16
rootfs/usr/lib/arm-linux-gnueabihf/: libcurl-gnutls.so.4.2.0  libcurl.so.4.2.0  libltdl.la  libmagic.so.1.0.0
rootfs/usr/sbin/: rsyslogd
(+716 files in other folders)
